Modification AreaDTO, component créer un utilisateur fix
